# telegram-bot

./: .gitignore  AGENTS.md  CHANGELOGS.md  Cargo.toml  DEPLOYMENT.md  MEMORY.md  README.md  SETUP.md
ai-handlers/: Cargo.toml
ai-handlers/src/: ai_mention_detector.rs  ai_response_handler.rs  ai_response_handler_test.rs  lib.rs  sync_ai_handler.rs
ai-handlers/tests/: sync_ai_handler_test.rs
ai-integration/src/: Cargo.toml  lib.rs
bot-runtime/: Cargo.toml
bot-runtime/docs/: README.md
bot-runtime/docs/middleware/: README.md  auth-middleware.md  logging-middleware.md  memory-middleware.md  persistence-middleware.md
bot-runtime/src/: ai_detection_handler.rs  ai_query_handler.rs  handler.rs  handler_chain.rs  lib.rs  memory_middleware.rs  middleware.rs  state.rs
crates/bigmodel-embedding/: Cargo.toml
crates/bigmodel-embedding/src/: bigmodel_embedding_test.rs  lib.rs
crates/embedding/bigmodel-embedding/: Cargo.toml
crates/embedding/openai-embedding/: Cargo.toml
crates/llm/telegram-bot-llm/: Cargo.toml
crates/memory-lance/: Cargo.toml
crates/memory-lance/src/: config.rs  distance_type.rs  index_type.rs  lib.rs  store.rs
crates/memory-lance/tests/: lance_semantic_strategy_integration_test.rs  lance_three_strategies_integration_test.rs  lance_vector_store_integration_test.rs
crates/memory-loader/: Cargo.toml  README.md
crates/memory-loader/src/: converter.rs
crates/memory-sqlite/: Cargo.toml
crates/memory-sqlite/src/: lib.rs
crates/memory/memory-core/: Cargo.toml
crates/middleware/: Cargo.toml
crates/middleware/src/: lib.rs  memory_middleware.rs  persistence_middleware.rs
dbot-cli/: .env.example  .gitignore  Cargo.toml  README.md
dbot-cli/src/: cli.rs  lib.rs  main.rs
dbot-core/: ARCHITECTURE.md  Cargo.toml
dbot-core/src/: bot.rs  error.rs  lib.rs  logger.rs  types.rs
dbot-llm/: Cargo.toml
dbot-llm-cli/: Cargo.toml
dbot-llm-cli/src/: lib.rs  main.rs
dbot-llm-cli/tests/: sync_llm_handler_test.rs
dbot-llm/src/: lib.rs
dbot-telegram/: Cargo.toml
dbot-telegram/src/: adapters.rs  bot_adapter.rs  lib.rs  runner.rs
handlers/: Cargo.toml
handlers/src/: lib.rs  memory_handler.rs  persistence_handler.rs
handlers/src/test/: logging_auth_handler_test.rs  memory_handler_test.rs  mod.rs  persistence_handler_test.rs
langgraph-bot/: .env.example  CAPABILITIES.md  Cargo.toml  self-test-checklist.md
langgraph-bot/src/: checkpoint.rs  cli.rs  format.rs  lib.rs  llm_request_logging.rs  load.rs  main.rs  memory.rs  noop_checkpointer.rs  react.rs  telegram_db.rs  telegram_handler.rs
langgraph-bot/src/chat/: mod.rs
langgraph-bot/src/commands/: load.rs  memory.rs  mod.rs  seed.rs
langgraph-bot/src/run/: mod.rs
langgraph-bot/src/telegram/: ensure_memory_handler.rs  handler.rs  mod.rs  stream_edit.rs
langgraph-bot/src/tools/: mod.rs  store_get_tool_source.rs
langgraph-bot/tests/: agent_handler_integration_test.rs  agent_handler_queue_test.rs  checkpoint_react_state_test.rs  checkpoint_test.rs  load_test.rs  react_test.rs  run_telegram_integration_test.rs
langgraph-bot/tests/common/: mock_bot.rs  mod.rs
llm-handlers/: Cargo.toml
llm-handlers/src/: lib.rs  llm_mention_detector.rs  sync_llm_handler.rs
llm-handlers/tests/: sync_llm_handler_test.rs
memory/: Cargo.toml  LANCE_INTEGRATION.md  README.md
memory/examples/: context_builder_verification.rs  feature_verification.rs
memory/src/: config.rs  context.rs  embedding.rs  inmemory_store.rs  lance_store.rs  lib.rs  migration.rs  openai_embedding.rs  sqlite_store.rs  store.rs  strategies.rs  types.rs
memory/src/context/: builder.rs  context_builder_test.rs  context_test.rs  estimate_tokens_test.rs  mod.rs  types.rs  utils.rs
memory/tests/: types_test.rs
seed-messages/: Cargo.toml
seed-messages/src/: generate.rs  lib.rs  main.rs  samples.json
storage/: Cargo.toml
storage/src/: error.rs  lib.rs  message_repo.rs  message_repo_test.rs  models.rs  repository.rs  sqlite_pool.rs
storage/src/models/: message_query.rs  message_record.rs  message_stats.rs  mod.rs
storage/tests/: message_repo_test.rs
telegram-bot/: .env.example  .env.test.example  Cargo.toml  README.md
telegram-bot-ai/: Cargo.toml  README.md
telegram-bot-ai/src/: lib.rs  main.rs
telegram-bot-examples/: .env.example  Cargo.toml
telegram-bot-examples/src/: clock.rs  echo.rs  lib.rs
telegram-bot-llm/: .env.example  Cargo.toml
telegram-bot-llm/src/: lib.rs
telegram-bot/src/: adapters.rs  chain.rs  cli.rs  components.rs  config.rs  lib.rs  main.rs  mention.rs  runner.rs  telegram_impl.rs
telegram-bot/src/config/: base.rs  bot_config.rs  extensions.rs  mod.rs  tests.rs
telegram-bot/src/core/: bot.rs  error.rs  logger.rs  mod.rs  types.rs
telegram-bot/src/embedding/: bigmodel.rs  config.rs  mod.rs  openai.rs
telegram-bot/src/handlers/: logging_auth.rs  memory_handler.rs  memory_handler_test.rs  mod.rs  noop_handler.rs  persistence_handler.rs
telegram-bot/src/memory/: inmemory.rs  mod.rs  sqlite.rs
telegram-bot/src/memory_core/: chat_scoped_store.rs  mod.rs  store.rs  strategy_result.rs  types.rs
telegram-bot/src/memory_lance/: config.rs  distance_type.rs  index_type.rs  mod.rs  store.rs
telegram-bot/src/memory_strategies/: mod.rs  recent_messages.rs  semantic_search.rs  strategy.rs  user_preferences.rs  utils.rs
telegram-bot/src/storage/: message_repo.rs  mod.rs  repository.rs  sqlite_pool.rs
telegram-bot/src/telegram/: adapters.rs  bot_adapter.rs  config.rs  mod.rs  runner.rs
telegram-bot/tests/: chat_scoped_store_test.rs  mention_test.rs  message_repo_test.rs  mock_memory_store.rs  runner_integration_test.rs
telegram-llm-bot/: Cargo.toml
telegram-llm-bot/src/: assembly.rs  facade.rs  lib.rs  main.rs
telegram-llm-bot/src/handlers/: inline_llm.rs  mention.rs  mention_detector.rs  mod.rs  sync_llm.rs
telegram-llm-bot/src/llm_handlers/: sync_llm_handler.rs
telegram-llm-bot/tests/: inline_llm_handler_test.rs  llm_query_test.rs  mention_detector_test.rs  sync_llm_handler_test.rs
telegram-simple-bot/: .env.example  Cargo.toml
telegram-simple-bot/src/: main.rs
(+190 files in other folders)
