[workspace]
resolver = "2"
members = [
    "storage",
    "llm-handlers",
    "telegram-bot",
    "dbot-llm-cli",
    "crates/llm/openai-client",
    "crates/llm/telegram-bot-llm",
    "crates/memory/memory-core",
    "crates/memory/memory-strategies",
    "crates/embedding/embedding",
    "crates/embedding/openai-embedding",
    "crates/embedding/bigmodel-embedding",
    "crates/llm-client",
    "crates/prompt",
]
