[package]
name = "ai-handlers"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-client = { path = "../crates/ai-client" }
dbot-core = { path = "../dbot-core" }
storage = { path = "../storage" }
memory = { path = "../memory" }
memory-inmemory = { path = "../crates/memory/memory-inmemory" }
prompt = { path = "../crates/prompt" }
embedding = { path = "../crates/embedding" }
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
chrono = "0.4"
serde = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
ai-client = { path = "../crates/ai-client" }
dbot-core = { path = "../dbot-core" }
