[package]
name = "bot-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
dbot-core = { path = "../dbot-core" }
storage = { path = "../storage" }
telegram-bot-ai = { path = "../telegram-bot-ai" }
teloxide = { version = "0.17", features = ["macros"] }
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
chrono = "0.4"
serde = "1.0"
tokio = { version = "1", features = ["full"] }
