[package]
name = "dbot-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dbot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dotenvy = "0.15"
chrono = "0.4"
teloxide = { version = "0.17", features = ["macros"] }
dbot-core = { path = "../dbot-core" }
storage = { path = "../storage" }
telegram-bot = { path = "../telegram-bot" }
telegram-bot-llm = { path = "../crates/llm/telegram-bot-llm" }
openai-client = { path = "../crates/llm/openai-client" }
memory = { path = "../memory" }
memory-sqlite = { path = "../crates/memory/memory-sqlite" }
memory-loader = { path = "../crates/memory/memory-loader" }
memory-lance = { path = "../crates/memory/memory-lance" }
async-trait = "0.1"
