[package]
name = "dbot-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dbot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15"
teloxide = { version = "0.17", features = ["macros"] }
dbot-core = { path = "../dbot-core" }
storage = { path = "../storage" }
telegram-bot = { path = "../telegram-bot" }
telegram-bot-llm = { path = "../crates/llm/telegram-bot-llm" }
openai-client = { path = "../crates/llm/openai-client" }
memory = { path = "../memory" }
memory-sqlite = { path = "../crates/memory/memory-sqlite" }
async-trait = "0.1"
