[package]
name = "dbot-llm-cli"
version = "0.1.0"
edition = "2021"

[features]
default = []
lance = ["telegram-bot/lance"]

[lib]
name = "dbot_llm"
path = "src/lib.rs"

[[bin]]
name = "dbot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
embedding = { path = "../crates/embedding/embedding" }
llm-client = { path = "../crates/llm-client" }
openai-client = { path = "../crates/llm/openai-client" }
prompt = { path = "../crates/prompt" }
serde = "1.0"
telegram-bot = { path = "../telegram-bot" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
