[package]
name = "dbot-llm"
version = "0.1.0"
edition = "2021"

[lib]
name = "dbot_llm"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
dbot-core = { path = "../dbot-core" }
dbot-telegram = { path = "../dbot-telegram" }
llm-client = { path = "../crates/llm-client" }
llm-handlers = { path = "../llm-handlers" }
openai-client = { path = "../crates/llm/openai-client" }
telegram-bot = { path = "../telegram-bot" }
