[package]
name = "dbot-telegram"
version = "0.1.0"
edition = "2021"
description = "Telegram Bot framework: adapters, runner, minimal config (REPL + handler chain)"

[dependencies]
dbot-core = { path = "../dbot-core" }
handler-chain = { path = "../handler-chain" }
teloxide = { version = "0.17", features = ["macros"] }
tracing = "0.1"
anyhow = "1.0"
chrono = "0.4"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
