[package]
name = "handlers"
version = "0.1.0"
edition = "2021"

[dependencies]
telegram-bot = { path = "../telegram-bot" }
memory-handler = { path = "../crates/memory/memory-handler" }
storage = { path = "../storage" }
async-trait = "0.1"
tracing = "0.1"
chrono = "0.4"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
