[package]
name = "llm-handlers"
version = "0.1.0"
edition = "2021"

[dependencies]
llm-client = { path = "../crates/llm-client" }
telegram-bot = { path = "../telegram-bot" }
storage = { path = "../storage" }
memory = { path = "../memory" }
memory-inmemory = { path = "../crates/memory/memory-inmemory" }
prompt = { path = "../crates/prompt" }
embedding = { path = "../crates/embedding/embedding" }
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
chrono = "0.4"
serde = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
llm-client = { path = "../crates/llm-client" }
telegram-bot = { path = "../telegram-bot" }
