[package]
name = "memory"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
lancedb = { version = "0.22", optional = true }
arrow-array = { version = "53", optional = true }
arrow-schema = { version = "53", optional = true }
futures = { version = "0.3", optional = true }
embedding = { path = "../crates/embedding" }

[features]
default = []
lance = ["lancedb", "arrow-array", "arrow-schema", "futures"]

[dev-dependencies]
tokio-test = "0.4"
