[package]
name = "memory"
version = "0.1.0"
edition = "2021"

[dependencies]
memory-core = { path = "../crates/memory-core" }
memory-strategies = { path = "../crates/memory-strategies" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
embedding = { path = "../crates/embedding" }

[dev-dependencies]
tokio-test = "0.4"
memory-inmemory = { path = "../crates/memory-inmemory" }
memory-sqlite = { path = "../crates/memory-sqlite" }
openai-embedding = { path = "../crates/openai-embedding" }
tempfile = "3"
