[package]
name = "seed-messages"
version = "0.1.0"
edition = "2021"
description = "Generate MessageRecord-shaped seed messages for fill/export (no telegram-bot dependency)"

[[bin]]
name = "seed-messages"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
anyhow = "1"
