[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
async-trait = "0.1"
