[package]
name = "telegram-bot-examples"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]

[[bin]]
name = "echo-bot"
path = "src/echo.rs"

[[bin]]
name = "clock-bot"
path = "src/clock.rs"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = "0.4"
dbot-core = { path = "../dbot-core" }
