[package]
name = "telegram-bot-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
llm-client = { path = "../crates/llm-client" }
teloxide = "0.17"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dotenvy = "0.15"
dbot-core = { path = "../dbot-core" }
prompt = { path = "../crates/prompt" }
