[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
dbot-core = { path = "../dbot-core" }
dbot-telegram = { path = "../dbot-telegram" }
llm-handlers = { path = "../llm-handlers" }
storage = { path = "../storage" }
llm-client = { path = "../crates/llm-client" }
openai-client = { path = "../crates/llm/openai-client" }
embedding = { path = "../crates/embedding/embedding" }
openai-embedding = { path = "../crates/embedding/openai-embedding" }
bigmodel-embedding = { path = "../crates/embedding/bigmodel-embedding" }
memory = { path = "../memory" }
memory-inmemory = { path = "../crates/memory/memory-inmemory" }
memory-sqlite = { path = "../crates/memory/memory-sqlite" }
memory-lance = { path = "../crates/memory/memory-lance" }
middleware = { path = "../middleware" }
handler-chain = { path = "../handler-chain" }
async-trait = "0.1"
chrono = "0.4"
anyhow = "1.0"
tracing = "0.1"

[dev-dependencies]
mockall = "0.14"
mockito = "1.7"
tempfile = "3.24"
tokio-test = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = "0.4"
serial_test = "3.0"
dbot-core = { path = "../dbot-core" }
