[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

[features]
default = []
lance = ["memory-lance"]

[lib]
name = "telegram_bot"
path = "src/lib.rs"

[[bin]]
name = "dbot-base"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
storage = { path = "../storage" }
embedding = { path = "../crates/embedding/embedding" }
openai-embedding = { path = "../crates/embedding/openai-embedding" }
bigmodel-embedding = { path = "../crates/embedding/bigmodel-embedding" }
memory = { path = "../memory" }
memory-inmemory = { path = "../crates/memory/memory-inmemory" }
memory-sqlite = { path = "../crates/memory/memory-sqlite" }
memory-lance = { path = "../crates/memory/memory-lance", optional = true }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"

[dev-dependencies]
mockall = "0.14"
mockito = "1.7"
tempfile = "3.24"
tokio-test = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = "0.4"
serial_test = "3.0"
dbot-llm-cli = { path = "../dbot-llm-cli" }
