[package]
name = "telegram-llm-bot"
version = "0.1.0"
edition = "2021"

[features]
default = []
lance = ["dep:memory-lance"]

[lib]
name = "telegram_llm_bot"
path = "src/lib.rs"

[[bin]]
name = "telegram-llm-bot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
llm-client = { path = "../crates/llm-client" }
openai-client = { path = "../crates/llm/openai-client" }
prompt = { path = "../crates/prompt" }
serde = "1.0"
telegram-bot = { path = "../telegram-bot" }
memory-lance = { path = "../crates/memory/memory-lance", optional = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
