[package]
name = "telegram-bot-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = "0.17"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
openai-client = { path = "../openai-client" }
async-openai = "0.25"
dotenvy = "0.15"
chrono = "0.4"
futures = "0.3"
