[package]
name = "bigmodel-embedding"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
embedding = { path = "../embedding" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
