[package]
name = "memory-lance"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
lancedb = { version = "0.23" }
arrow-array = { version = "56" }
arrow-schema = { version = "56" }
futures = "0.3"
tracing = "0.1"
memory = { path = "../../memory" }

[dev-dependencies]
tempfile = "3"
