[package]
name = "memory-loader"
version = "0.1.0"
edition = "2021"
description = "Load messages from SQLite to LanceDB vector store"

[dependencies]
storage = { path = "../../storage" }
memory = { path = "../../memory" }
memory-lance = { path = "../memory-lance" }
memory-core = { path = "../memory-core" }
embedding = { path = "../embedding" }
openai-embedding = { path = "../openai-embedding" }
bigmodel-embedding = { path = "../bigmodel-embedding" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
