[package]
name = "memory-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono"] }
memory = { path = "../../memory" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
