[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
dbot-core = { path = "../../dbot-core" }
storage = { path = "../../storage" }
memory = { path = "../../memory" }
memory-inmemory = { path = "../memory-inmemory" }
async-trait = "0.1"
tracing = "0.1"
chrono = "0.4"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
