[package]
name = "openai-embedding"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
async-openai = "0.25"
embedding = { path = "../../../telegram-bot/embedding" }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["rt", "macros"] }
