[package]
name = "memory-core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for memory storage and context strategies"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
anyhow = "1.0"
